# rust-url-shortener

./: .gitignore  configure_inventory  configure_nginx  configure_server  terraform_output
ansible/: configure_nginx.yml  configure_server.yml  deploy.yml
ansible/templates/: default.j2  domain.conf.j2
rust/: Cargo.toml
rust/src/: lib.rs  main.rs  models.rs  random.rs  routes.rs  server.rs
rust/src/model/: analytics_result.rs  id.rs  link_clicks.rs  mod.rs  short_url_click.rs
terraform/environment/prod/: output.yml  prod.tf
terraform/modules/vromio/: vromio.tf
