[package]
name = "vromio"
version = "0.1.0"
authors = ["djo <damo@wedispatch.io>", "ele <ele@wedispatch.io>"]
edition = "2018"

[dependencies]
base64 = "0.10.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.1.21"
hyper = "0.12.28"
hyper-router = "0.5.0"
lazy_static = "1.3.0"
postgres = { version = "0.15", features = ["with-chrono"] }
rand = "0.6.5"
r2d2_postgres = "0.14"
r2d2 = "0.8"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.1.14"
url = "1.7.2"
uuid = { version = "0.7", features = ["serde", "v4"] }